# MolGC

./: README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.prod.yml
__legacy__/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
__legacy__/elemental/algorithms/: __init__.py  kabsch.py  regression.py
__legacy__/elemental/common/enums/: __init__.py  numerical.py  text.py
__legacy__/elemental/data/: __init__.py  energy.py  load.py  read.py  report.py
__legacy__/elemental/enums/: __init__.py  file.py  functional.py  individual.py
__legacy__/elemental/utils/: __init__.py  bond.py  coords.py  distances.py  excel.py  matrix.py  plotter.py  progress.py  read.py  topsis.py  transformations.py
__legacy__/src/individual/: __init__.py  analysis.py
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  README.md  entrypoint.sh  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.dev.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 2025_10_26_204909_234e04ad1606_.py  2025_10_27_104331_02f5e7c146aa_.py  2025_10_28_093653_51f877aa85f3_expires_at_correction_on_cleanup.py  2025_11_01_220717_8a214e3751b3_.py  2025_11_02_145043_8058ab005f98_.py  2025_11_12_192659_47a5fa6260d8_.py
backend/app/: __init__.py
backend/app/elemental/common/: README.MD  __init__.py
backend/app/elemental/exceptions/: README.md  __init__.py  utils.py
backend/app/settings/: README.md  __init__.py  application.py  get_settings.py
backend/app/src/: README.MD
(+1090 files in other folders)
