[project]
name = "MolGC"
version = "1.0.0"
description = "MolGC: Molecular Geometry Comparator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "authlib>=1.5.2",
    "bcrypt==3.2.2",
    "fastapi-mail>=1.4.2",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "jose>=1.0.0",
    "PyJWT>=2.10.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
    "celery>=5.5.3",
    "redis>=5.2.1",
    "fastapi-websocket-pubsub>=1.0.1",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "docformatter>=1.7.7",
    "flake8>=7.3.0",
    "flake8-annotations>=3.2.0",
    "flake8-black>=0.4.0",
    "flake8-docstrings>=1.7.0",
    "flake8-isort>=7.0.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
]
